# ChangeLog for x11-proto/glproto
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/glproto/ChangeLog,v 1.36 2006/07/19 14:25:54 gmsoft Exp $

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> glproto-1.4.7.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> glproto-1.4.7.ebuild:
  Mark 1.4.7 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; glproto-1.4.7.ebuild:
  arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; glproto-1.4.7.ebuild:
  ppc/sparc/mips/alpha stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -glproto-1.4.6.ebuild:
  Pull old ebuild.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> glproto-1.4.7.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> glproto-1.4.7.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; glproto-1.4.7.ebuild:
  x86 stable.

*glproto-1.4.7 (13 May 2006)

  13 May 2006; Donnie Berkholz <spyderous@gentoo.org>;
  +glproto-1.4.7.ebuild:
  Bump for final EXT_tfp tokens.

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> glproto-1.4.6.ebuild:
  Add ~x86-fbsd keyword.

*glproto-1.4.6 (20 Mar 2006)

  20 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -glproto-1.4.5.ebuild, +glproto-1.4.6.ebuild:
  Bump.

*glproto-1.4.5 (22 Feb 2006)

  22 Feb 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -glproto-1.4.4.ebuild, +glproto-1.4.5.ebuild:
  Bump to add GLX_FRONT_LEFT_EXT.

*glproto-1.4.4 (15 Feb 2006)

  15 Feb 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -glproto-1.4.3.ebuild, +glproto-1.4.4.ebuild:
  Bump. Mainly fixes some problems for people trying to build Xgl.

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> glproto-1.4.3.ebuild:
  Added ~ppc64

  31 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org> glproto-1.4.3.ebuild:
  Unstable on hppa.

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>