@@ -1,0 +1,3 @@
+MD5 3dfbd17203c0c88b94b6f579f24c11cc glproto-1.4.8.tar.bz2 53852
+RMD160 ff2250c6a1b5d9f900cc45dc8329dbc8c04c3433 glproto-1.4.8.tar.bz2 53852
+SHA256 2f5d84413853b688b7bb46c66fee108a499190e1f7810afffb775910778f053c glproto-1.4.8.tar.bz2 53852
