@@ -1,6 +1,13 @@
 # ChangeLog for x11-proto/glproto
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/glproto/ChangeLog,v 1.36 2006/07/19 14:25:54 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/glproto/ChangeLog,v 1.37 2006/09/20 17:18:21 dberkholz Exp $
+
+*glproto-1.4.8 (20 Sep 2006)
+
+  20 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>;
+  +glproto-1.4.8.ebuild:
+  Bump for new tfp opcodes. Need to build xorg-server against this version if
+  using mesa 6.5.1 and wanting nice compositing eye candy.
 
   19 Jul 2006; Guy Martin <gmsoft@gentoo.org> glproto-1.4.7.ebuild:
   Stable on hppa.
